[package]
name = "schellen-bridge-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
clap = { version = "4.0.13", features = ["cargo"] }
tokio = { version = "1", features = ["full", "macros"] }
serde = { version = "1.0", features = ["derive"] }
warp = "0.3"
tokio-serial = "5.4.1"
tokio-util = "0.7.4"
hex = "0.4.3"
futures = "0.3"
bytes = "1"
