[package]
name = "schellen-bridge-rs"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
tokio-serial = "5.4.4"
tokio-util = "0.7.4"
futures = "0.3"
bytes = "1"
color-eyre = "0.6.2"
tracing = "0.1"
tracing-subscriber = "0.3"
strum = { version = "0.24", features = ["derive"] }

